# Links-Classification

./: .env.example  .gitignore  README.md  links.md  main.py  pyproject.toml
src/: classifier.py  config.py  fetcher.py  models.py  pipeline.py  storage.py  utils.py
tests/: test_pipeline.py  test_storage.py  test_utils.py
